[project]
name = "conflict-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.60",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "pyppeteer>=2.0.0",
]
